--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,20 @@ body {
     letter-spacing: 1px;
 }
 
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+::-webkit-scrollbar-track {
+    border: 1px solid #2E2E2E;
+    box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.5);
+}
+
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(45deg, #343434, #2E2E2E);
+    border-radius: 3px;
+}
+
 /*Loader and slides*/
 
 .loader {
@@ -187,8 +201,8 @@ body {
 
 .carousel-inner #item .card-body {
     box-sizing: border-box;
-    max-width: 278px;
-    max-height: 616.906px;
+    max-width: 278;
+    max-height: 616.906;
     background-color: #E4E4E4;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 2px 6px 0 rgba(0, 0, 0, 0.19)
 }
@@ -294,7 +308,7 @@ body {
     line-height: 40px;
     margin: 0 0 0 6px;
     border-radius: 100%;
-    background-color: #33353d
+    background-color: #33353d;
 }
 
 .copyright-text {
